refactor(inversify-site): update doc links to support multiple docusaurus version

--- a/packages/docs/services/inversify-site/docs/api/binding-syntax.mdx
+++ b/packages/docs/services/inversify-site/docs/api/binding-syntax.mdx
@@ -15,7 +15,7 @@ import CodeBlock from '@theme/CodeBlock';
 
 # Binding Syntax
 
-Binding syntax is provided as a fluent interface resulting from using the [container API](/docs/api/container#bind) or the [container module API](/docs/api/container-module#bind).
+Binding syntax is provided as a fluent interface resulting from using the [container API](./container.mdx#bind) or the [container module API](./container-module.mdx#bind).
 
 ## BindToFluentSyntax
 
@@ -133,7 +133,7 @@ Represents a service binding given a service identifier and a service resolution
 inSingletonScope(): BindWhenOnFluentSyntax<T>;
 ```
 
-Sets the binding scope to singleton. Refer to the [docs](/docs/fundamentals/binding#singleton) for more information.
+Sets the binding scope to singleton. Refer to the [docs](../fundamentals/binding.mdx#singleton) for more information.
 
 ### inTransientScope
 
@@ -141,7 +141,7 @@ Sets the binding scope to singleton. Refer to the [docs](/docs/fundamentals/bind
 inTransientScope(): BindWhenOnFluentSyntax<T>;
 ```
 
-Sets the binding scope to transient. Refer to the [docs](/docs/fundamentals/binding#transient) for more information.
+Sets the binding scope to transient. Refer to the [docs](../fundamentals/binding.mdx#transient) for more information.
 
 ### inRequestScope
 
@@ -149,7 +149,7 @@ Sets the binding scope to transient. Refer to the [docs](/docs/fundamentals/bind
 inRequestScope(): BindWhenOnFluentSyntax<T>;
 ```
 
-Sets the binding scope to request. Refer to the [docs](/docs/fundamentals/binding#request) for more information.
+Sets the binding scope to request. Refer to the [docs](../fundamentals/binding.mdx#request) for more information.
 
 ## BindOnFluentSyntax
 
