--- a/packages/docs/services/inversify-site/docs/api/container-module.mdx
+++ b/packages/docs/services/inversify-site/docs/api/container-module.mdx
@@ -37,7 +37,7 @@ Options to be passed to the load callback. It contains the following properties:
 bind: <T>(serviceIdentifier: ServiceIdentifier<T>) => BindToFluentSyntax<T>
 ```
 
-Refer to the [docs](/docs/api/container#bind) for more information.
+Refer to the [docs](./container.mdx#bind) for more information.
 
 ### isBound
 
@@ -45,7 +45,7 @@ Refer to the [docs](/docs/api/container#bind) for more information.
 isBound: (serviceIdentifier: ServiceIdentifier, options?: IsBoundOptions) => boolean
 ```
 
-Refer to the [docs](/docs/api/container#isbound) for more information.
+Refer to the [docs](./container.mdx#isbound) for more information.
 
 ### onActivation
 
@@ -53,7 +53,7 @@ Refer to the [docs](/docs/api/container#isbound) for more information.
 onActivation: <T>(serviceIdentifier: ServiceIdentifier<T>, activation: BindingActivation<T>) => void
 ```
 
-Refer to the [docs](/docs/api/container#onactivation) for more information.
+Refer to the [docs](./container.mdx#onactivation) for more information.
 
 ### onDeactivation
 
@@ -61,7 +61,7 @@ Refer to the [docs](/docs/api/container#onactivation) for more information.
 onDeactivation: <T>(serviceIdentifier: ServiceIdentifier<T>, deactivation: BindingDeactivation<T>) => void
 ```
 
-Refer to the [docs](/docs/api/container#ondeactivation) for more information.
+Refer to the [docs](./container.mdx#ondeactivation) for more information.
 
 ### unbind
 
@@ -69,12 +69,12 @@ Refer to the [docs](/docs/api/container#ondeactivation) for more information.
 unbind: (serviceIdentifier: ServiceIdentifier) => Promise<void>
 ```
 
-Refer to the [docs](/docs/api/container#unbind) for more information.
+Refer to the [docs](./container.mdx#unbind) for more information.
 
 ## Example: binding services through ContainerModule API
 
 When a container module is loaded into a Container, the load callback is invoked. This is the opportunity for the container module to register bindings and handlers.
 
-When a container module is unloaded from a Container, the bindings added by that container will be removed, and the [deactivation process](/docs/fundamentals/lifecycle/deactivation) will occur for each of them. Container deactivation and [activation handlers](/docs/fundamentals/lifecycle/activation) will also be removed.
+When a container module is unloaded from a Container, the bindings added by that container will be removed, and the [deactivation process](../fundamentals/lifecycle/deactivation.mdx) will occur for each of them. Container deactivation and [activation handlers](../fundamentals/lifecycle/activation.mdx) will also be removed.
 
 <CodeBlock language="ts">{containerModuleApiExampleSource}</CodeBlock>
