--- a/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
@@ -48,8 +48,8 @@ When the service is resolved, a new resolved value will be used each time.
 
 ### Constraint
 
-Specifies whether the binding is used to provide a resolved value for the given service identifier. Refer to the [API docs](/docs/api/binding-syntax#bindingwhensyntax) for more information.
+Specifies whether the binding is used to provide a resolved value for the given service identifier. Refer to the [API docs](../api/binding-syntax.mdx#bindwhenfluentsyntax) for more information.
 
 ### Lifecycle handlers
 
-Handlers that are called after a resolved value is provided or a singleton-scoped binding is deactivated. Refer to the [API docs](/docs/api/binding-syntax#bindingonsyntax) for more information.
+Handlers that are called after a resolved value is provided or a singleton-scoped binding is deactivated. Refer to the [API docs](../api/binding-syntax.mdx#bindonfluentsyntax) for more information.
