--- a/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/activation.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/activation.mdx
@@ -11,9 +11,9 @@ Whenever a service is resolved, the activation event is dispatched. An activatio
 
 There are multiple ways to provide an activation handler
 
-- Adding the handler to the [container](/docs/api/container#onactivation).
-- Adding the handler to the [binding](/docs/api/binding-syntax#onactivation).
-- Adding the handler to the class through the [postConstruct decorator](/docs/api/decorator#postconstruct).
+- Adding the handler to the [container](../../api/container.mdx#onactivation).
+- Adding the handler to the [binding](../../api/binding-syntax.mdx#onactivation).
+- Adding the handler to the class through the [postConstruct decorator](../../api/decorator.mdx#postconstruct).
 
 When multiple activation handlers are binded to a service identifier, the `postConstruct` handler is called before any others. After that, the binding handler is called. Then, container handlers are called, starting at the root container and descending the descendant containers stopping at the container with the binding.
 
