--- a/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/deactivation.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/lifecycle/deactivation.mdx
@@ -11,8 +11,8 @@ Whenever a singleton scoped service is unbound, the deactivation event is dispat
 
 It's possible to add a deactivation handler in multiple ways
 
-- Adding the handler to the [container](/docs/api/container#ondeactivation).
-- Adding the handler to a [binding](/docs/api/binding-syntax#ondeactivation).
-- Adding the handler to the class through the [preDestroy decorator](/docs/api/decorator#predestroy).
+- Adding the handler to the [container](../../api/container.mdx#ondeactivation).
+- Adding the handler to a [binding](../../api/binding-syntax.mdx#ondeactivation).
+- Adding the handler to the class through the [preDestroy decorator](../../api/decorator.mdx#predestroy).
 
 Handlers added to the container are the first ones to be resolved. Any handler added to a child container is called before the ones added to their parent. Relevant bindings from the container are called next and finally the `preDestroy` method is called. In the example above, relevant bindings are those bindings bound to the unbinded "Destroyable" service identifier.
