--- a/packages/docs/services/inversify-site/versioned_docs/version-6.x/api/binding-syntax.mdx
+++ b/packages/docs/services/inversify-site/versioned_docs/version-6.x/api/binding-syntax.mdx
@@ -18,7 +18,7 @@ import CodeBlock from '@theme/CodeBlock';
 
 # Binding Syntax
 
-Binding syntax is provided as a fluent interface resulting from using the [container API](/docs/api/container#bind) or the [container module API](/docs/api/container-module#bind).
+Binding syntax is provided as a fluent interface resulting from using the [container API](./container.mdx#bind) or the [container module API](./container-module.mdx#bind).
 
 ## BindingToSyntax
 
@@ -166,7 +166,7 @@ Represents a service binding given a service identifier and a service resolution
 inSingletonScope(): BindingWhenOnSyntax<T>;
 ```
 
-Sets the binding scope to singleton. Refer to the [docs](/docs/fundamentals/binding#singleton) for more information.
+Sets the binding scope to singleton. Refer to the [docs](../fundamentals/binding.mdx#singleton) for more information.
 
 ### inTransientScope
 
@@ -174,7 +174,7 @@ Sets the binding scope to singleton. Refer to the [docs](/docs/fundamentals/bind
 inTransientScope(): BindingWhenOnSyntax<T>;
 ```
 
-Sets the binding scope to transient. Refer to the [docs](/docs/fundamentals/binding#transient) for more information.
+Sets the binding scope to transient. Refer to the [docs](../fundamentals/binding.mdx#transient) for more information.
 
 ### inRequestScope
 
@@ -182,7 +182,7 @@ Sets the binding scope to transient. Refer to the [docs](/docs/fundamentals/bind
 inRequestScope(): BindingWhenOnSyntax<T>;
 ```
 
-Sets the binding scope to request. Refer to the [docs](/docs/fundamentals/binding#request) for more information.
+Sets the binding scope to request. Refer to the [docs](../fundamentals/binding.mdx#request) for more information.
 
 ## BindingOnSyntax
 
