--- a/packages/docs/services/inversify-site/versioned_docs/version-6.x/fundamentals/snapshot.mdx
+++ b/packages/docs/services/inversify-site/versioned_docs/version-6.x/fundamentals/snapshot.mdx
@@ -10,3 +10,5 @@ Snapshots allow you to save the state of your Inversify container at a specific 
 Think of it as taking a picture of your container, preserving the exact configurations and dependencies present when the snapshot was taken. This can be incredibly useful for debugging, testing, or tracking changes made to your container over time.
 
 By creating snapshots of your Inversify container, you can easily roll back to a previous working state or compare different configurations without manually recreating them. This functionality can save you time and effort, making your development process smoother and more efficient.
+
+Refer to the [API documentation](../api/container.mdx#snapshot) for more information on how to create and use snapshots in Inversify.
