--- a/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
@@ -5,16 +5,30 @@ title: Binding
 import bindingScopeRequestSource from '@inversifyjs/code-examples/generated/examples/v7/bindingScopeRequest.ts.txt';
 import bindingScopeSingletonSource from '@inversifyjs/code-examples/generated/examples/v7/bindingScopeSingleton.ts.txt';
 import bindingScopeTransientSource from '@inversifyjs/code-examples/generated/examples/v7/bindingScopeTransient.ts.txt';
-import fundamentalsBindingExample from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsBindingExample.ts.txt';
+import fundamentalsBindingExampleSource from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsBindingExample.ts.txt';
+import fundamentalsBindingFromClassMetadataSource from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsBindingFromClassMetadata.ts.txt';
+import fundamentalsAutobindingSource from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsAutobinding.ts.txt';
 import CodeBlock from '@theme/CodeBlock';
 
 # Binding
 
 A binding represents the relationship between a service identifier and its resolution. Bindings are added to a container to configure it to provide services.
 
-<CodeBlock language="ts">{fundamentalsBindingExample}</CodeBlock>
+<CodeBlock language="ts">{fundamentalsBindingExampleSource}</CodeBlock>
 
 When the binding is added to the container, the container is configured to provide a resolved value for the service identifier `Weapon` by resolving the `Katana` class. `container.bind` creates a new binding with certain properties, which are explained below.
+
+## Relying on emitted class metadata
+
+When using TypeScript, you can rely on the emitted class metadata to avoid having to manually specify the service identifier. This is done by using the `@injectable` decorator from `inversify` on the class you want to bind. You need to enable the `emitDecoratorMetadata` TypeScript compiler option.
+
+<CodeBlock language="ts">{fundamentalsBindingFromClassMetadataSource}</CodeBlock>
+
+## Autobinding
+
+InversifyJS provides a feature called autobinding that allows you to automatically bind classes. Whenever a class service is being resolved and no bindings are found in the planning phase, the container adds a type binding to the requested class before proceeding with the planning phase. This feature is disabled by default. To enable it, you need to pass the `autoBind` option to the container or pass an `autobind` option when calling `container.get`.
+
+<CodeBlock language="ts">{fundamentalsAutobindingSource}</CodeBlock>
 
 ## Binding properties
 
