--- a/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
@@ -5,6 +5,7 @@ title: Binding
 import bindingScopeRequestSource from '@inversifyjs/code-examples/generated/examples/v7/bindingScopeRequest.ts.txt';
 import bindingScopeSingletonSource from '@inversifyjs/code-examples/generated/examples/v7/bindingScopeSingleton.ts.txt';
 import bindingScopeTransientSource from '@inversifyjs/code-examples/generated/examples/v7/bindingScopeTransient.ts.txt';
+import bindingToSyntaxApiToResolvedValueForDbRepositorySource from '@inversifyjs/code-examples/generated/examples/v7/bindingToSyntaxApiToResolvedValueForDbRepository.ts.txt';
 import fundamentalsBindingExampleSource from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsBindingExample.ts.txt';
 import fundamentalsBindingFromClassMetadataSource from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsBindingFromClassMetadata.ts.txt';
 import fundamentalsAutobindingSource from '@inversifyjs/code-examples/generated/examples/v7/fundamentalsAutobinding.ts.txt';
@@ -29,6 +30,14 @@ When using TypeScript, you can rely on the emitted class metadata to avoid havin
 InversifyJS provides a feature called autobinding that allows you to automatically bind classes. Whenever a class service is being resolved and no bindings are found in the planning phase, the container adds a type binding to the requested class before proceeding with the planning phase. This feature is disabled by default. To enable it, you need to pass the `autoBind` option to the container or pass an `autobind` option when calling `container.get`.
 
 <CodeBlock language="ts">{fundamentalsAutobindingSource}</CodeBlock>
+
+## Asynchronously resolved bindings
+
+Whenever a promise-like value is resolved from a binding, the container will wait for the promise to resolve before returning the resolved value to their dependent services:
+
+<CodeBlock language="ts">{bindingToSyntaxApiToResolvedValueForDbRepositorySource}</CodeBlock>
+
+In the example, the `dbConnectionSymbol` database connection is resolved asynchronously. The container waits for promises to be resolved, passing an `AwesomeDbDriverConnection` instance to the resolve value factory instead of a `Promise<AwesomeDbDriverConnection>` one.
 
 ## Binding properties
 
