--- a/packages/docs/services/inversify-site/versioned_docs/version-6.x/fundamentals/di-hierarchy.mdx
+++ b/packages/docs/services/inversify-site/versioned_docs/version-6.x/fundamentals/di-hierarchy.mdx
@@ -11,7 +11,13 @@ InversifyJS is a popular library for implementing inversion of control (IoC) and
 
 With InversifyJS's hierarchical injection system, you can create a hierarchy of containers where each container can have a parent container. This allows for better organization and separation of concerns in your application.
 
-When a dependency needs to be injected, InversifyJS starts by looking in the current container for a binding. If the binding is not found, it moves up the hierarchy to the parent container and continues the search. This process continues until the dependency is resolved or the top-level parent container is reached.
+When a dependency needs to be injected, InversifyJS starts by looking in the current container for a binding. If the binding is not found, it moves up the hierarchy to the parent container and continues the search. This process continues until a binding is found or the top-level parent container is reached.
+
+:::warning
+
+Found bindings might be discarded if their constraints are not met. For example, if a named binding is found in the child container for the requested service, that binding overrides parent bindings even if this binding is later discarded in a non-named resolution request.
+
+:::
 
 By using InversifyJS's hierarchical injection system, you can easily manage complex dependencies and keep your code clean and modular. It provides a flexible and scalable solution for handling dependencies in your TypeScript applications.
 
